still had LayeredCanvas growing issues.  Fixed with overflow: hidden

--- a/css3-mixins.sass
+++ b/css3-mixins.sass
@@ -187,6 +187,8 @@
   @else
     @include css3-prefix('transition',  "all 0.2s ease-in-out 0s")
 
+@mixin transition-delay($delay)
+  @include css3-prefix('transition-delay', $delay)
 
 // TRIPLE BORDERS
 @mixin triple-borders($colorOne: #3C3C3C, $colorTwo: #999999, $colorThree: #000000, $radius: 0)
