--- a/plot/LayeredCanvas.sass
+++ b/plot/LayeredCanvas.sass
@@ -1,2 +1,2 @@
 .layered-canvas
-  height: 100%
+  overflow: hidden
